# magic_container

./: README.md
.github/workflows/: release.yml
magic-container-app/: package-lock.json  package.json
magic-container-app/src/: App.css  App.tsx
magic-container-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
magic-container-app/src-tauri/python_server/: main.py
magic-container-app/src-tauri/src/: inference_manager.rs  install_manager.rs  launch_manager.rs  lib.rs  main.rs
magic-container-app/src-tauri/src/models/: mod.rs
magic-container-app/src-tauri/src/specs/: macos.rs  mod.rs  windows.rs
